# ChoiRbot

./: .gitignore  Dockerfile  Gemfile  README.md  README_docker.md  _config.yml  bringup_dashing_devel.sh  citeus.md  docker-compose.yml  docker-compose_gpu.yml  documentation.md  index.html  index.md  installation.md  news.md  readthedocs.yaml  requirements.txt  requirements_disropt.txt  video.md
_site/: feed.xml  (+2 more)
choirbot/: package.xml  setup.cfg  setup.py
choirbot/choirbot/: __init__.py
choirbot/choirbot/collision/: __init__.py  closest_robot_getter.py  collision_avoidance.py  double_integrator_ca.py  single_integrator_ca.py  unicycle_ca.py
choirbot/choirbot/collision/safety_filters/: __init__.py  double_integrator_cbf.py  safety_filter_strategy.py  (+1 more)
choirbot/choirbot/communicator/: __init__.py  communicator.py
choirbot/choirbot/controller/: __init__.py  controller.py  quadrotor_accelerationcontroller.py  quadrotor_controller.py  unicycle_pose.py  unicycle_velocity.py
choirbot/choirbot/guidance/: __init__.py  guidance.py  optimization_thread.py
choirbot/choirbot/integrator/: __init__.py  double_integrator.py  integrator.py  quadrotor_integrator.py  single_integrator.py  unicycle_integrator.py
choirbot/choirbot/optimizer/: __init__.py  aggregative_optimizer.py  aggregative_utils.py  mpc_optimizer.py  optimizer.py  task_optimizer.py
choirbot/choirbot/planner/: __init__.py  mock_planner.py  planner.py
choirbot/choirbot/utils/: __init__.py  or_event.py  position_getter.py  rviz_spawner.py  simple_visualizer.py  visualizer.py
choirbot/docs/source/: conf.py  index.rst
choirbot/tests/communicators/: test_callback_groups.py
choirbot_examples/: package.xml  setup.cfg  setup.py
choirbot_examples/choirbot_examples/: containment_guidance_i.py  formationcontrol_guidance_i.py  mpc.py  planner_i.py  rviz_spawner_i.py  single_integrator_i.py  task_assignment.py  turtlebot3_position_control_feedback.py  turtlebot_spawner.py  unicycle_controller.py  unicycle_integrator_i.py
choirbot_examples/choirbot_examples/bearingformationcontrol/: integrator.py
choirbot_examples/choirbot_examples/containment/: guidance.py  integrator.py  rviz.py
choirbot_examples/choirbot_examples/formationcontrol/: controller.py  guidance.py
choirbot_examples/choirbot_examples/mpc/: guidance.py  integrator.py  rviz.py
choirbot_examples/choirbot_examples/quadrotorbearingformationcontrol/: controller.py  guidance.py  integrator.py
choirbot_examples/choirbot_examples/rl/: guidance.py  guidance_single.py  integrator.py
choirbot_examples/choirbot_examples/taskassignment/: controller.py  guidance.py  planner.py  table.py  turtlebot3_position_control.py  turtlebot3_position_control_feedback.py
choirbot_examples/launch/: bearingformationcontrol.launch.py  containment.launch.py  formationcontrol.launch.py  formationcontrol_unicycle.launch.py  gazebo.launch.py  mpc.launch.py  quadrotorbearingformationcontrol.launch.py  rl.launch.py  rl_single.launch.py  taskassignment.launch.py
choirbot_examples/resource/: model_burger.sdf  rvizconf.rviz
choirbot_interfaces/: CMakeLists.txt  package.xml  setup.py
choirbot_interfaces/msg/: PositionTask.msg  PositionTaskArray.msg
choirbot_interfaces/srv/: PositionTaskService.srv  TaskCompletionService.srv
robot_spawner/: package.xml  setup.cfg  setup.py
robot_spawner/launch/: formation_spawner.launch.py  gazebo.launch.py  turtle_spawner.launch.py
robot_spawner/robot_spawner/: spawn_turtlebot.py
(+147 files in other folders)
