<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>choirbot_examples</name>
  <version>0.0.1</version>
  <description>Example files for ChoiRbot</description>
  <maintainer email="info@opt4smart.eu">OPT4SMART</maintainer>
  <license>GNU General Public License v3.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <depend>choirbot</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
