<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>choirbot_interfaces</name>
  <version>0.0.1</version>
  <description>Interfaces for ChoiRbot</description>
  <maintainer email="info@opt4smart.eu">OPT4SMART</maintainer>
  <license>GNU General Public License v3.0</license>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <buildtool_depend>action_msgs</buildtool_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
