<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_spawner</name>
  <version>0.0.1</version>
  <description>Gazebo robot spawning utilities</description>
  <maintainer email="info@opt4smart.eu">OPT4SMART</maintainer>
  <license>GNU General Public License v3.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
